--- a/src/TemperatureChart.css
+++ b/src/TemperatureChart.css
@@ -1,10 +1,31 @@
 .Chart-heading{
-    color: blue;
+    color: mediumslateblue;
     font: bold;
     text-align: center;
 }
 
 .Chart-container{
-    width: 1200px;
-    height: 600px;
+    width: 100%;
+    height: 50%;
+}
+
+.Chart-items-container{
+    display: flex;
+    align-items: flex-start; 
+    margin-left: 15%;
+    margin-right: 15%;
+}
+
+.Filter-buttons-container{
+    text-align: end;
+}
+
+.Filter-button{
+    margin: 5px
+}
+
+.Filter-design{
+    background-color: lavender;
+    margin: 5px 5px 5px 5px;
+    padding: 10px 10px 10px 10px;
 }
